MarkdownGrammarParser.py
# Generated from MarkdownGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MarkdownGrammarParser ( Parser ):

    grammarFileName = "MarkdownGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'>'", "<INVALID>", 
                     "'***'", "'**_'", "'_**'", "'__*'", "'*__'", "'**'", 
                     "'__'", "'~~'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'*'", "'+'", "'-'", "'_'", "'.'", "':'", "<INVALID>", 
                     "'|'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "NEWLINE", "HASHES", "GT", "INDENT", 
                      "BOLD_ITALIC_STAR", "BOLD_ITALIC_STAR_UNDER_START", 
                      "BOLD_ITALIC_STAR_UNDER_END", "BOLD_ITALIC_UNDER_STAR_START", 
                      "BOLD_ITALIC_UNDER_STAR_END", "BOLD_STAR", "BOLD_UNDER", 
                      "STRIKE", "HR_DASH", "HR_STAR", "HR_UNDER", "STAR", 
                      "PLUS", "MINUS", "UNDER", "DOT", "COLON", "OL_NUM", 
                      "PIPE", "COLON_DASHES_COLON", "DASHES_COLON", "COLON_DASHES", 
                      "DASHES", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", 
                      "URL", "WS", "TEXT", "ANY_SYMBOL_NO_PIPE", "ANY_SYMBOL" ]

    RULE_doc = 0
    RULE_block = 1
    RULE_header = 2
    RULE_blockquote = 3
    RULE_blockquoteLine = 4
    RULE_list = 5
    RULE_listItem = 6
    RULE_ul_marker = 7
    RULE_horizontalRule = 8
    RULE_table = 9
    RULE_tableHeaderLine = 10
    RULE_tableSepLine = 11
    RULE_tableBodyLine = 12
    RULE_tableRow = 13
    RULE_paragraph = 14
    RULE_inlineContent = 15
    RULE_inlineItem = 16
    RULE_inlineItem_no_pipe = 17
    RULE_bold_italic = 18
    RULE_bold = 19
    RULE_italic = 20
    RULE_strikethrough = 21
    RULE_link = 22

    ruleNames =  [ "doc", "block", "header", "blockquote", "blockquoteLine", 
                   "list", "listItem", "ul_marker", "horizontalRule", "table", 
                   "tableHeaderLine", "tableSepLine", "tableBodyLine", "tableRow", 
                   "paragraph", "inlineContent", "inlineItem", "inlineItem_no_pipe", 
                   "bold_italic", "bold", "italic", "strikethrough", "link" ]

    EOF = Token.EOF
    NEWLINE=1
    HASHES=2
    GT=3
    INDENT=4
    BOLD_ITALIC_STAR=5
    BOLD_ITALIC_STAR_UNDER_START=6
    BOLD_ITALIC_STAR_UNDER_END=7
    BOLD_ITALIC_UNDER_STAR_START=8
    BOLD_ITALIC_UNDER_STAR_END=9
    BOLD_STAR=10
    BOLD_UNDER=11
    STRIKE=12
    HR_DASH=13
    HR_STAR=14
    HR_UNDER=15
    STAR=16
    PLUS=17
    MINUS=18
    UNDER=19
    DOT=20
    COLON=21
    OL_NUM=22
    PIPE=23
    COLON_DASHES_COLON=24
    DASHES_COLON=25
    COLON_DASHES=26
    DASHES=27
    LBRACKET=28
    RBRACKET=29
    LPAREN=30
    RPAREN=31
    URL=32
    WS=33
    TEXT=34
    ANY_SYMBOL_NO_PIPE=35
    ANY_SYMBOL=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MarkdownGrammarParser.EOF, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownGrammarParser.BlockContext)
            else:
                return self.getTypedRuleContext(MarkdownGrammarParser.BlockContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.NEWLINE)
            else:
                return self.getToken(MarkdownGrammarParser.NEWLINE, i)

        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_doc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoc" ):
                listener.enterDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoc" ):
                listener.exitDoc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoc" ):
                return visitor.visitDoc(self)
            else:
                return visitor.visitChildren(self)




    def doc(self):

        localctx = MarkdownGrammarParser.DocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_doc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 98784247806) != 0):
                self.state = 48
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 33, 34, 36]:
                    self.state = 46
                    self.block()
                    pass
                elif token in [1]:
                    self.state = 47
                    self.match(MarkdownGrammarParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(MarkdownGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def horizontalRule(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.HorizontalRuleContext,0)


        def header(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.HeaderContext,0)


        def table(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.TableContext,0)


        def blockquote(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.BlockquoteContext,0)


        def list_(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.ListContext,0)


        def paragraph(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.ParagraphContext,0)


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MarkdownGrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.horizontalRule()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.header()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.table()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.blockquote()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.list_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.paragraph()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASHES(self):
            return self.getToken(MarkdownGrammarParser.HASHES, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownGrammarParser.NEWLINE, 0)

        def inlineContent(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.InlineContentContext,0)


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = MarkdownGrammarParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(MarkdownGrammarParser.HASHES)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 98784247804) != 0):
                self.state = 64
                self.inlineContent()


            self.state = 67
            self.match(MarkdownGrammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockquoteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockquoteLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownGrammarParser.BlockquoteLineContext)
            else:
                return self.getTypedRuleContext(MarkdownGrammarParser.BlockquoteLineContext,i)


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_blockquote

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockquote" ):
                listener.enterBlockquote(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockquote" ):
                listener.exitBlockquote(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockquote" ):
                return visitor.visitBlockquote(self)
            else:
                return visitor.visitChildren(self)




    def blockquote(self):

        localctx = MarkdownGrammarParser.BlockquoteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blockquote)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 69
                    self.blockquoteLine()

                else:
                    raise NoViableAltException(self)
                self.state = 72 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockquoteLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GT(self):
            return self.getToken(MarkdownGrammarParser.GT, 0)

        def NEWLINE(self):
            return self.getToken(MarkdownGrammarParser.NEWLINE, 0)

        def inlineContent(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.InlineContentContext,0)


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_blockquoteLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockquoteLine" ):
                listener.enterBlockquoteLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockquoteLine" ):
                listener.exitBlockquoteLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockquoteLine" ):
                return visitor.visitBlockquoteLine(self)
            else:
                return visitor.visitChildren(self)




    def blockquoteLine(self):

        localctx = MarkdownGrammarParser.BlockquoteLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_blockquoteLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(MarkdownGrammarParser.GT)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 98784247804) != 0):
                self.state = 75
                self.inlineContent()


            self.state = 78
            self.match(MarkdownGrammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownGrammarParser.ListItemContext)
            else:
                return self.getTypedRuleContext(MarkdownGrammarParser.ListItemContext,i)


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = MarkdownGrammarParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 80
                    self.listItem()

                else:
                    raise NoViableAltException(self)
                self.state = 83 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_listItem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OrderedItemContext(ListItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MarkdownGrammarParser.ListItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OL_NUM(self):
            return self.getToken(MarkdownGrammarParser.OL_NUM, 0)
        def inlineContent(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.InlineContentContext,0)

        def NEWLINE(self):
            return self.getToken(MarkdownGrammarParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrderedItem" ):
                listener.enterOrderedItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrderedItem" ):
                listener.exitOrderedItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrderedItem" ):
                return visitor.visitOrderedItem(self)
            else:
                return visitor.visitChildren(self)


    class UnorderedItemContext(ListItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MarkdownGrammarParser.ListItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ul_marker(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.Ul_markerContext,0)

        def inlineContent(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.InlineContentContext,0)

        def NEWLINE(self):
            return self.getToken(MarkdownGrammarParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnorderedItem" ):
                listener.enterUnorderedItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnorderedItem" ):
                listener.exitUnorderedItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnorderedItem" ):
                return visitor.visitUnorderedItem(self)
            else:
                return visitor.visitChildren(self)



    def listItem(self):

        localctx = MarkdownGrammarParser.ListItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listItem)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 17, 18]:
                localctx = MarkdownGrammarParser.UnorderedItemContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.ul_marker()
                self.state = 86
                self.inlineContent()
                self.state = 87
                self.match(MarkdownGrammarParser.NEWLINE)
                pass
            elif token in [22]:
                localctx = MarkdownGrammarParser.OrderedItemContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(MarkdownGrammarParser.OL_NUM)
                self.state = 90
                self.inlineContent()
                self.state = 91
                self.match(MarkdownGrammarParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ul_markerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(MarkdownGrammarParser.STAR, 0)

        def PLUS(self):
            return self.getToken(MarkdownGrammarParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(MarkdownGrammarParser.MINUS, 0)

        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_ul_marker

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUl_marker" ):
                listener.enterUl_marker(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUl_marker" ):
                listener.exitUl_marker(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUl_marker" ):
                return visitor.visitUl_marker(self)
            else:
                return visitor.visitChildren(self)




    def ul_marker(self):

        localctx = MarkdownGrammarParser.Ul_markerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ul_marker)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 458752) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HorizontalRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(MarkdownGrammarParser.NEWLINE, 0)

        def HR_DASH(self):
            return self.getToken(MarkdownGrammarParser.HR_DASH, 0)

        def HR_STAR(self):
            return self.getToken(MarkdownGrammarParser.HR_STAR, 0)

        def HR_UNDER(self):
            return self.getToken(MarkdownGrammarParser.HR_UNDER, 0)

        def BOLD_ITALIC_STAR(self):
            return self.getToken(MarkdownGrammarParser.BOLD_ITALIC_STAR, 0)

        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_horizontalRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHorizontalRule" ):
                listener.enterHorizontalRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHorizontalRule" ):
                listener.exitHorizontalRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHorizontalRule" ):
                return visitor.visitHorizontalRule(self)
            else:
                return visitor.visitChildren(self)




    def horizontalRule(self):

        localctx = MarkdownGrammarParser.HorizontalRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_horizontalRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57376) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 98
            self.match(MarkdownGrammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableHeaderLine(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.TableHeaderLineContext,0)


        def tableSepLine(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.TableSepLineContext,0)


        def tableBodyLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownGrammarParser.TableBodyLineContext)
            else:
                return self.getTypedRuleContext(MarkdownGrammarParser.TableBodyLineContext,i)


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTable" ):
                return visitor.visitTable(self)
            else:
                return visitor.visitChildren(self)




    def table(self):

        localctx = MarkdownGrammarParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_table)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.tableHeaderLine()
            self.state = 101
            self.tableSepLine()
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self.tableBodyLine() 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableHeaderLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableRow(self):
            return self.getTypedRuleContext(MarkdownGrammarParser.TableRowContext,0)


        def getRuleIndex(self):
            return MarkdownGrammarParser.RULE_tableHeaderLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableHeaderLine" ):
                listener.enterTableHeaderLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableHeaderLine" ):
                listener.exitTableHeaderLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableHeaderLine" ):
                return visitor.visitTableHeaderLine(self)
            else:
                return visitor.visitChildren(self)




    def tableHeaderLine(self):

        localctx = MarkdownGrammarParser.TableHeaderLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tableHeaderLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.tableRow()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableSepLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.PIPE)
            else:
                return self.getToken(MarkdownGrammarParser.PIPE, i)

        def NEWLINE(self):
            return self.getToken(MarkdownGrammarParser.NEWLINE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.WS)
            else:
                return self.getToken(MarkdownGrammarParser.WS, i)

        def DASHES(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.DASHES)
            else:
                return self.getToken(MarkdownGrammarParser.DASHES, i)

        def HR_DASH(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.HR_DASH)
            else:
                return self.getToken(MarkdownGrammarParser.HR_DASH, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.MINUS)
            else:
                return self.getToken(MarkdownGrammarParser.MINUS, i)

        def DASHES_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.DASHES_COLON)
            else:
                return self.getToken(MarkdownGrammarParser.DASHES_COLON, i)

        def COLON_DASHES(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.COLON_DASHES)
            else:
                return self.getToken(MarkdownGrammarParser.COLON_DASHES, i)

        def COLON_DASHES_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownGrammarParser.COLON_DASHES_COLON)
            else:
                return self.getToken(MarkdownGrammarParser.COLON_DASHES_COLON, i)
